--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ stages:
               awsCredentials: 'AWS-SERVICE'
               regionName: 'us-east-1'
               deploymentMode: 'codeonly'
-              functionName: 'http-crud-tasks-function'
+              functionName: 'Lambda-crud-tasks'
               codeLocation: 's3object'
               s3Bucket: 'bu-lambda-crud-tasks'
               s3ObjectKey: 'lambda-crud-tasks.zip'
